# DataCore

./: README.md
dataserver/: build.sbt
dataserver/api/py/: data_api.py
dataserver/api/py/jzquant/src/jzquant/: __init__.py
dataserver/common/: build.sbt
dataserver/common/src/main/scala/org/quantos/utils/jrpc/: JRpcClient.scala  JRpcServer.scala  JsonHelper.scala  MsgPackHelper.scala  package.scala
dataserver/common/src/main/scala/test/: JsonRpcTest.scala
dataserver/server/: build.sbt
dataserver/server/etc/: dataserver-dev.conf  instrument.csv  market.csv
dataserver/server/project/: plugins.sbt
dataserver/server/script/: prepare_data.bat  prepare_data.sh  start.bat  start.sh  stop.sh
dataserver/server/src/main/resources/: application.conf  logback.xml
dataserver/server/src/main/scala/org/quantos/jads/: Boot.scala  Config.scala
dataserver/server/src/main/scala/org/quantos/jads/common/: DataType.scala
dataserver/server/src/main/scala/org/quantos/jads/gateway/: HttpServer.scala  JRpcServer.scala  SessionActor.scala  WsJRpcServlet.scala  ZmqJRpcServer.scala
dataserver/server/src/main/scala/org/quantos/jads/services/jsi/: JsiService.scala  jsiUtils.scala
dataserver/server/src/main/scala/org/quantos/jads/services/jsq/: JsqService.scala  PublisherActor.scala  QueryActor.scala  QuoteSchema.scala  SubscriberActor.scala
dataserver/server/src/main/scala/org/quantos/jads/utils/: BaseData.scala  CommonRequestHandler.scala  CsvHelper.scala  MathUtil.scala  SharedMdlinkClient.scala  TimeUtil.scala
doc/: api_ref.md  base_data.md  data_spec.md  download.md  install.md  market_data.md
mdlink/: CMakeLists.txt
mdlink/etc/: calendar.csv  instrument.csv  jzs.json  market.csv
mdlink/scripts/: download.py  jztsctrl  prepare_data.bat  set-env.sh  start.bat  start.sh  stop.sh
mdlink/src/base/: CMakeLists.txt  Calendar.cpp  Calendar.h  DoubleUtil.h  Init.cpp  Init.h  Logger.h  StringUtil.cpp  StringUtil.h  TimeUtil.cpp  TimeUtil.h  TypeUtil.cpp  TypeUtil.h  csv-reader.cpp  csv-reader.h  perf.h
mdlink/src/base/linux/: shared_ptr_atomic.cpp  shared_ptr_atomic.h
mdlink/src/base/test/: Test.cpp  ThreadTest.cpp
mdlink/src/base/win32/: getopt.c  getopt.h
mdlink/src/client/: CMakeLists.txt
mdlink/src/client/cpp/: CMakeLists.txt
mdlink/src/client/cpp/include/jzs/: QmsClient.h
mdlink/src/client/cpp/src/: QmsClient.cpp
mdlink/src/client/jztsapi/: .project  pom.xml
mdlink/src/client/jztsapi/src/main/java/jzs/api/: MdlinkClient.java  QmsClient.java  Utils.java
mdlink/src/client/jztsapi/src/main/java/jzs/msg/: Jzs.java
mdlink/src/client/jztsapi/src/main/java/jzs/msg/md/: Md.java
mdlink/src/client/jztsapi/src/main/java/jzs/msg/misc/: Misc.java
mdlink/src/client/py/: CMakeLists.txt  demo1.py  demo2.py  tdlink_demo.py
mdlink/src/client/py/jzs/: MdlinkClient.py  QmsClient.py  QmsSystem.py  __init__.py
mdlink/src/config/: CXML.cpp  CXML.h  Ini.cpp  Ini.h  IniApi.cpp  IniApi.h  IniReader.cpp  IniReader.h  SysConfig.cpp  SysConfig.h  XMLAction.cpp  XMLAction.h
mdlink/src/mdlink/mdlink_ctp/: CMakeLists.txt  CtpMdServer.cpp  CtpMdServer.h  MdLinkMain.cpp
mdlink/src/mdlink/mdlink_merge/: CMakeLists.txt  MdLinkMain.cpp  MergeMdServer.cpp  MergeMdServer.h
mdlink/src/mdlink/mdlink_sina/: CMakeLists.txt  MdLinkMain.cpp  SinaApi.cpp  SinaApi.h  SinaMdServer.cpp  SinaMdServer.h  main.cpp  tdxhqapi.cpp  tdxhqapi.h
mdlink/src/mdlink/mdlink_tdf/: CMakeLists.txt  MdLinkMain.cpp  TdfMdServer.cpp  TdfMdServer.h
mdlink/src/mdlink/mdlink_tencent/: CMakeLists.txt  MdLinkMain.cpp  TencentApi.cpp  TencentApi.h  TencentMdServer.cpp  TencentMdServer.h
mdlink/src/mdlink/public/: MapTables.cpp  MapTables.h  MdServer.cpp  MdServer.h
mdlink/src/msgbus/: CMakeLists.txt  Client.h  Common.h  Event.h  MsgQueue.h  Publisher.h  Server.h  Subscriber.h
mdlink/src/msgbus/impl/: ClientImpl.cpp  ClientImpl.h  MsgZmqCtx.cpp  MsgZmqCtx.h  PublisherImpl.cpp  PublisherImpl.h  ServerImpl.cpp  ServerImpl.h  SubscriberImpl.cpp  SubscriberImpl.h
mdlink/src/protocol/: CMakeLists.txt  build.bat  build.sh  jzs.proto  md.proto  misc.proto  qms.proto
mdlink/src/protocol/cpp/: jzs.h  jzs.pb.cc  jzs.pb.h  md.pb.cc  md.pb.h  misc.pb.cc  misc.pb.h  qms.pb.cc  qms.pb.h
mdlink/src/protocol/java/jzs/msg/qms/: Qms.java
mdlink/src/protocol/py/: jzs_pb2.py  md_pb2.py  misc_pb2.py  qms_pb2.py
mdlink/src/qms/: CMakeLists.txt  Qms.h  QmsBar.cpp  QmsBar.h  QmsData.cpp  QmsData.h  QmsMain.cpp  QmsSvr.cpp  QmsSvr.h  main.cpp  qms_client.py
mdlink/src/qms/test/: qms_test.cpp  qms_test.py
tools/linux/: tk2bar.py  tkreader.py
tools/win32/: _tkreader.pyd  tk2bar.py  tkreader.py
tools/win64/: _tkreader.pyd  tk2bar.py
